Final Changes Made - More comment changes - Fixed responsive layout issue so now displays on mobile - Updated the README file to be more concise - Added in small bootstrap features - Padding and sizing changes in CSS alongside optimisation for mobile view

--- a/.vscode/CG/style.css
+++ b/.vscode/CG/style.css
@@ -7,11 +7,14 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f0f0f0;
+}
 
-}/*Styling for heading and sub heading */
+/*Styling for heading and sub heading */
 h1 {
     color: #6a1b9a;
     text-align: center;
+    border: 6px solid #6a1b9a;
+    padding: 10px
 }
 
 h3 {
@@ -25,7 +28,7 @@ h3 {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 10px;
     max-width: 1000px;
-    margin: 20px;
+    margin: 20px auto;
 }
 
 /*Styles the size of the images within the cat gallery variable from the CATAAS API*/
@@ -35,7 +38,7 @@ h3 {
     border-radius: 10px;
 }
 
-button {
+.btn {
     background-color: #6a1b9a;
     color: white;
     border: none;
@@ -49,7 +52,30 @@ button:hover {
     background-color: #8e24aa;
 }
 
-.error {
+/* Error message styles */
+#error-message {
     color: red;
     margin-top: 20px;
-}
+  }
+  
+/* Responsive style for mobile view, media query that targets */
+  @media (max-width: 600px) {
+    h1 {
+      font-size: 24px;
+    }
+  
+    #loadMoreButton {
+      width: 80%;
+      font-size: 16px;
+      padding: 15px;
+    }
+  
+    #cat-gallery {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    #cat-gallery li {
+      width: 80%;
+    }
+  }
